# dcs-tetrad

./: Cargo.toml  Readme.md
.cargo/: config.toml
.github/workflows/: build.yml
lua/: export.lua  hook.lua
lua/DCS/Config/: tetrad-config.lua
lua/DCS/Scripts/: tetrad-export.lua
lua/DCS/Scripts/Hooks/: tetrad-gamegui.lua
src/: config.rs  dcs.rs  gui.rs  lib.rs  monitor.rs  perf_monitor.rs  worker.rs
