[package]
edition = "2021"
name = "dcs-tetrad"
rust-version = "1.63"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
log-panics = {version = "2", features = ["with-backtrace"]}
mlua = {version = "0.8", default-features = false, features = ["lua51", "module", "serialize"]}
once_cell = "1.15.0"
serde = {version = "1.0", features = ["derive"]}
simple-logging = "2.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
