[package]
edition = "2021"
name = "dcs-tetrad"
rust-version = "1.64"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.22"
csv = "1.1.6"
eframe = {git = "https://github.com/emilk/egui", features = ["wgpu"]}
egui = {git = "https://github.com/emilk/egui"}
egui-wgpu = {git = "https://github.com/emilk/egui"}
flexi_logger = "0.24.0"
log = "0.4.17"
log-panics = {version = "2", features = ["with-backtrace"]}
mlua = {version = "0.8", default-features = false, features = ["lua51", "module", "serialize"]}
once_cell = "1.15.0"
serde = {version = "1.0", features = ["derive"]}
winit = "0.27.4"
zstd = "0.11.2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
