[package]
edition = "2021"
name = "dcs-tetrad"
rust-version = "1.64"
version = "0.2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bounded-vec-deque = "0.1.1"
chrono = "0.4.22"
csv = "1.1.6"
eframe = {git = "https://github.com/bobmoretti/egui", branch = "user/bobmoretti/default-context", features = ["wgpu"]}
egui = {git = "https://github.com/bobmoretti/egui", branch = "user/bobmoretti/default-context"}
egui-wgpu = {git = "https://github.com/bobmoretti/egui", branch = "user/bobmoretti/default-context"}
fern = {version = "0.6.1", features = ["colored"]}
libc = "0.2.135"
log = "0.4.17"
log-panics = {version = "2", features = ["with-backtrace"]}
mlua = {version = "0.8", default-features = false, features = ["lua51", "module", "serialize"]}
num = "0.4.0"
once_cell = "1.15.0"
serde = {version = "1.0", features = ["derive"]}
windows = {version = "0.42.0", features = ["Win32_System_Console", "Win32_Foundation"]}
winit = "0.27.4"
zstd = "0.11.2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
